# egui-video-stream

./: .cursorrules  .gitignore  Cargo.toml  todo.md
src/: main.rs
