[package]
name = "egui-video-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
gstreamer = "0.23.4"
gstreamer-app = "0.23.4"
gstreamer-video = "0.23.4"
egui = "0.30.0"
eframe = "0.30.0"
image = "0.24"
chrono = "0.4.39"
anyhow = "1.0.95"
tracing = "0.1.41"
sysinfo = "0.33.1"
core-graphics = "0.24.0"
core-media = "0.5.1"
gstreamer-audio = "0.23.4"


[profile.dev]
opt-level=3
